--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 *{
   font-family: Verdana, Geneva, Tahoma, sans-serif ;
+  box-sizing: border-box;
 }
 body{
   margin:0px;
-  height: 100%;
+  height: 100vh;
+  background-color: #0b1120;
+  color: whitesmoke;
 }
