--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,1 +1,26 @@
+.container{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 0px 20px;
+    margin: 10px auto;
+}
 
+.tooltip{
+    position: absolute;
+    background: grey;
+    width: 100%;
+    height: 100%;
+}
+
+button{
+font-size: 16px;
+padding: 10px;
+border-radius: 10px;
+align-self: flex-start;
+margin-top: 50px;
+}
+
+button:hover{
+    box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.559);
+}
